--- a/game.css
+++ b/game.css
@@ -24,3 +24,18 @@
       padding: 1.5rem;
       width: 100%;
   }
+  /* HUD */
+  
+  #hud {
+      display: flex;
+      justify-content: space-between;
+  }
+  
+  .hud-prefix {
+      text-align: center;
+      font-size: 2rem;
+  }
+  
+  .hud-main-text {
+      text-align: center;
+  }
