--- a/game.css
+++ b/game.css
@@ -57,7 +57,8 @@
       width: 20rem;
       height: 4rem;
       margin-top: 1.5rem;
-      margin-bottom: 1.5rem;
+      margin-bottom: 2rem;
       font-size: 5.4rem;
-      color: #56A5EB;
+      color: #f0860d;
+      text-align: center;
   }
